1. 解决视图展示BUG 2. 优化流程图展示样式